test/files/neg/t6934/ScalaClass.scala
package test

class ScalaClass {
  /* double-checking that we can still do this */
  def hmm = JavaClass.STATIC_PROTECTED_FIELD
}